--- a/Disc_frontend/tsconfig.json
+++ b/Disc_frontend/tsconfig.json
@@ -29,7 +29,7 @@
     "noImplicitReturns": true, // Report error when not all code paths in function return a value
     "noImplicitOverride": true, // Ensure that the 'override' modifier is used when overriding methods
     "noPropertyAccessFromIndexSignature": true, // Disallow property access from index signatures
-    "noImplicitAny": true, // Raise error on expressions and declarations with an implied 'any' type
+    "noImplicitAny": false, // Raise error on expressions and declarations with an implied 'any' type
     "noImplicitThis": true, // Raise error on 'this' expressions with an implied 'any' type
     "alwaysStrict": true // Parse in strict mode and emit "use strict" for each source file
   },
